# iris

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  clippy.toml  package.json  pnpm-lock.yaml
.github/workflows/: Dockerfile  release.yml
.scaffdog/: new-route.md
migrations/20260720101044_photo-index/: up.sql
migrations/20260720101056_whitelist/: down.sql  up.sql
src/: api.rs  auth.rs  config.rs  context.rs  entry.rs  event.rs  infra.rs  ingest.rs  macros.rs  main.rs  model.rs  processor.rs  repository.rs  route.rs  services.rs  util.rs
src/api/: error.rs  extract.rs  federation.rs  header.rs  ingest.rs  middleware.rs  types.rs
src/api/federation/: route.rs
src/api/federation/route/: ping.rs
src/api/ingest/: config.rs  route.rs
src/api/ingest/route/: get_image.rs  get_images_list.rs  get_photo_meta.rs  get_photos_list_by_hashes_list.rs  (+2 more)
src/auth/: api.rs  auth.rs  config.rs  context.rs  endpoint.rs  extractor.rs  password.rs  protocol.rs  serialize.rs  session.rs  whitelist.rs
src/entry/: migrate.rs  server.rs  user.rs
src/federation/: auth.rs  config.rs  context.rs  extractor.rs  mod.rs  protocol.rs  repository.rs  request.rs
src/federation/api/: list.rs  mod.rs  ping.rs
src/federation/auth/: hash.rs  sign.rs  verify.rs
src/infra/: io.rs  log.rs  meta.rs  mod.rs  photo_index.rs  registry.rs  schema.rs  sqlite.rs
src/infra/api/: middleware.rs  mod.rs  openapi.rs  rate_limit.rs  types.rs
src/infra/photo_index/: all.rs  original_hash.rs
src/ingest/: config.rs  context.rs  mod.rs  model.rs  route.rs  services.rs
src/ingest/api/: delete.rs  get_image.rs  get_images_list.rs  get_photo_meta.rs  get_photos_list.rs  get_photos_list_by_hashes_list.rs  mod.rs  new_photo.rs  reprocess.rs  scheme.rs  sync.rs
src/ingest/infra/: io.rs  photo_index.rs  registry.rs
src/ingest/route/: get_image.rs  get_images_list.rs  get_photo_meta.rs  get_photos_list_by_hashes_list.rs  new_photo.rs  reprocess.rs  scheme.rs
src/ingest/services/: process.rs  property.rs  resize.rs
src/ingest/technicals/: mod.rs  stream.rs
src/processor/: config.rs  image.rs  protocol.rs  queue.rs  runner.rs
src/processor/image/: resize.rs
src/repository/: config.rs  federated.rs  io.rs  local.rs  registry.rs  sqlite.rs  whitelist.rs
src/repository/federation/: config.rs
src/repository/local/: io.rs
src/repository/photo_index/: all.rs  mod.rs  original_hash.rs
src/route/: get_image.rs  get_images_list.rs  get_photo_meta.rs  get_photos_list_by_hashes_list.rs  new_photo.rs  reprocess.rs  scheme.rs  upload_image.rs
src/services/: hash.rs  image.rs  mod.rs  process.rs  property.rs  resize.rs
src/services/extract/: color.rs  exif.rs  mod.rs
src/services/image/: color.rs  decode.rs  mod.rs  original.rs  resize.rs  stand.rs
src/services/process/: color.rs  original.rs
(+14 files in other folders)
