[package]
name = "iris"
version = "0.1.0"
edition = "2024"

[features]
federation = []

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ulid = "1.2.1"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
sha2 = "0.10.9"
kamadak-exif = "0.6.1"
image = "0.25.9"
rayon = "1.11.0"
config = "0.15.19"
clap = { version = "4.5.60", features = ["derive"] }
tower = "0.5.3"
random = "0.14.1"
rand = "0.10.0"
bytes = "1.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
http = "1.4.0"
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["pem"] }
urlencoding = "2.1.3"
rpassword = "7.4.0"
bcrypt = "0.19.0"
thiserror = "2.0.18"
base64 = "0.22.1"
indoc = "2.0.7"
